Added sample Stata wrapper for methods and included more descriptive README; Javadocs are also updated and bug was fixed that prevented methods from correctly handling variable lists previously.